--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!doctype html>
 <html class="no-js" lang="en">
-  <head>{{content_for_header}}
+  <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="canonical" href="http://ftp.denina.org/">
@@ -1448,5 +1448,5 @@ Item added to your cart
         recipientFormExpanded: `Gift card recipient form expanded`,
         recipientFormCollapsed: `Gift card recipient form collapsed`,
       };
-    </script><script src="//587b29.myshopify.com/cdn/shop/t/2/assets/predictive-search.js?v=162273246065392412141703082482" defer="defer"></script>{{content_for_layout}}</body>
+    </script><script src="//587b29.myshopify.com/cdn/shop/t/2/assets/predictive-search.js?v=162273246065392412141703082482" defer="defer"></script></body>
 </html>
